hotfix: style text

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             </label>
                             <div @click="remove" :id="index"
                                 class="flex-none m-1 cursor-pointer text-gray-300 text-xs self-start">
-                                remove
+                                Remove.
                             </div>
                         </div>
                     </template>
